--- a/fluEvidenceSynthesis/DESCRIPTION
+++ b/fluEvidenceSynthesis/DESCRIPTION
@@ -9,3 +9,4 @@ Description: More about what it does (maybe more than one line)
 License: GPL (3)
 Imports: Rcpp (>= 0.11.6), BH, RcppEigen
 LinkingTo: Rcpp, BH, RcppEigen
+Suggests: testthat
