--- a/fluEvidenceSynthesis/DESCRIPTION
+++ b/fluEvidenceSynthesis/DESCRIPTION
@@ -10,3 +10,4 @@ License: GPL (3)
 Imports: Rcpp (>= 0.11.6), BH, RcppEigen
 LinkingTo: Rcpp, BH, RcppEigen
 Suggests: testthat
+SystemRequirements: C++11
