--- a/fluEvidenceSynthesis/DESCRIPTION
+++ b/fluEvidenceSynthesis/DESCRIPTION
@@ -7,9 +7,8 @@ Author: Marc Baguelin, Edwin van Leeuwen
 Maintainer: Edwin van Leeuwen <edwinvanl@gmail.com>
 Description: Package to synthesise the multiplicity of surveillance datasets in order to evaluate how changing target populations in the seasonal vaccination programme would affect infection rate and mortality. Mainly meant for Influenza modelling, but can be used more generally.
 License: GPL-3
-Imports: Rcpp (>= 0.11.6), BH, RcppEigen
 LinkingTo: Rcpp, BH, RcppEigen
-Depends: R (>= 2.10), Rcpp
+Depends: R (>= 2.10), Rcpp (>= 0.11.6)
 Suggests: testthat, rjson, MASS
 SystemRequirements: C++11
 LazyData: true
