--- a/fluEvidenceSynthesis/DESCRIPTION
+++ b/fluEvidenceSynthesis/DESCRIPTION
@@ -9,6 +9,6 @@ Description: Package to synthesise the multiplicity of surveillance datasets in 
 License: GPL-3
 LinkingTo: Rcpp, BH, RcppEigen
 Depends: R (>= 2.10), Rcpp (>= 0.11.6)
-Suggests: testthat, rjson, MASS, deSolve
+Suggests: testthat, rjson, MASS
 SystemRequirements: C++11
 LazyData: true
