--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,23 @@ Version: 0.6.1
 Date: 2015-11-29
 Author: Marc Baguelin, Edwin van Leeuwen
 Maintainer: Edwin van Leeuwen <edwinvanl@gmail.com>
-Description: Package to synthesise the multiplicity of surveillance datasets in order to evaluate how changing target populations in the seasonal vaccination programme would affect infection rate and mortality. Mainly meant for Influenza modelling, but can be used more generally.
+Description: Package to synthesise the multiplicity of surveillance datasets in
+    order to evaluate how changing target populations in the seasonal vaccination
+    programme would affect infection rate and mortality. Mainly meant for Influenza
+    modelling, but can be used more generally.
 License: GPL-3
 LinkingTo: Rcpp, BH, RcppEigen
-Depends: R (>= 3.1.0), Rcpp (>= 0.11.6)
-Suggests: testthat, rjson, MASS, ISOweek,
-    knitr, moments
+Depends:
+    R (>= 3.1.0),
+    Rcpp (>= 0.11.6)
+Suggests:
+    testthat,
+    rjson,
+    MASS,
+    ISOweek,
+    knitr,
+    moments
 SystemRequirements: C++11
 LazyData: true
 VignetteBuilder: knitr
+RoxygenNote: 5.0.0
