--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ LinkingTo: Rcpp, BH, RcppEigen
 Depends:
     R (>= 3.1.0),
     Rcpp (>= 0.11.6)
+Imports: Rcpp (>= 0.11.6)
 Suggests:
     testthat,
     rjson,
