--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fluEvidenceSynthesis
 Type: Package
-Title: Flu Evidence Synthesis: analysing effectiveness of vaccine strategies
+Title: Flu Evidence Synthesis: Analysing Effectiveness of Vaccine Strategies
 Version: 0.7.0
 Date: 2015-11-29
 Author: Marc Baguelin, Edwin van Leeuwen
