--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Suggests:
     ISOweek,
     knitr,
     moments,
-    rmarkdown
+    rmarkdown,
+    pander,
+    ggplot2
 SystemRequirements: C++11
 LazyData: true
 VignetteBuilder: knitr
