--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ License: GPL-3
 LinkingTo: Rcpp, BH, RcppEigen
 Depends:
     R (>= 3.1.0),
+    ggplot2
 Imports:
     Rcpp (>= 0.11.6)
 Suggests:
@@ -25,8 +26,7 @@ Suggests:
     knitr,
     moments,
     rmarkdown,
-    pander,
-    ggplot2
+    pander
 SystemRequirements: C++11
 LazyData: true
 VignetteBuilder: knitr
