--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Depends:
     R (>= 3.1.0),
     ggplot2
 Imports:
-    Rcpp (>= 0.11.6)
+    Rcpp (>= 0.11.6),
+    ggplot2
 Suggests:
     testthat,
     rjson,
