Allow passing dates to infectionODEs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,4 @@ useDynLib(fluEvidenceSynthesis)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
 importFrom(ggplot2, ggproto, aes, Stat)
+importFrom(data.table, year, month, yday)
