--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Depends:
     R (>= 3.1.0),
 Imports:
     Rcpp (>= 0.11.6),
-    ggplot2
+    ggplot2,
+    data.table
 Suggests:
     testthat,
     rjson,
