--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,10 @@ License: GPL-3
 LinkingTo: Rcpp, BH, RcppEigen
 Depends:
     R (>= 3.1.0),
+    gtable,
+    scales,
+    lazyeval,
+    tibble
 Imports:
     Rcpp (>= 0.11.6),
     ggplot2,
