Pass risk ratios to the inference function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@ exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
 importFrom(ggplot2, ggproto, aes, Stat)
 importFrom(data.table, year, month, yday)
+importFrom(dplyr,"%>%")
