--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 after_success: "./travis.sh"
 
 install:
-- R -e 'devtools::install_deps(dep = T)'
+- R -e 'install.packages("devtools"); devtools::install_deps(dep = T)'
 
 script:
 - travis_wait R CMD build .
