Improve inference vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,4 @@ useDynLib(fluEvidenceSynthesis)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
 importFrom(ggplot2, ggproto, aes, Stat)
-importFrom(dplyr,"%>%")
+importFrom(magrittr,"%>%")
