--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - R -e 'install.packages("devtools"); devtools::install_deps(dep = T)'
 
 script:
-- travis_wait R CMD build .
+- travis_wait 30 R CMD build .
 - R CMD check *tar.gz
 
 os:
