[CI] Install dependencies using apt
commit 81d04d58a78bdbeb8e40c6ede4eb97a41e33eceb
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:58:46 2020 +0000

    [CI] Only use apt on linux image

commit 4725e404854b26267af95b804e485a3a27c1f3ab
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:56:02 2020 +0000

    [CI] Only use apt on linux image

commit 74ecf2e799f95e2c81a4364fbccae2d0c1330284
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:47:47 2020 +0000

    [CI] Ignore clang format

commit f2a48a56708a1588d30a796817e2ab1a338cebbd
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:38:57 2020 +0000

    [CI] Install dependencies using apt

commit 0c3970ad430adf6d4d0c3fde09d5556a08a4aca4
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:35:49 2020 +0000

    [CI] Install dependencies using apt

commit 21c4a7ec7d2db3b918d18e80cb6f48cc5da91845
Author: BlackEdder <edwinvanl@tuta.io>
Date:   Tue Jan 14 10:33:10 2020 +0000

    [CI] Install dependencies using apt

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,22 @@ sudo: required
 
 after_success: "./travis.sh"
 
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libxml2-dev
+      - libgit2-dev
+      - libssl-dev
+      - libssh2-1-dev
+      - pandoc
+      - pandoc-citeproc
+      - r-cran-testthat
+      - r-cran-devtools
+      - r-cran-tidyverse
+      - r-cran-rcppeigen
+      - r-cran-bh
+
 install:
 - R -e 'install.packages("devtools"); devtools::install_deps(dep = T)'
 
